Delete Post Test is added

--- a/BlogIntegrationTests/app1.config
+++ b/BlogIntegrationTests/app1.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
@@ -20,6 +20,9 @@
     </assemblyBinding>
   </runtime>
   <specFlow>
+    <add key="URL" value="http://localhost:60634/" />
+    <add key="TestDataSheetPath" value="..\..\BlogUITests\DataDrivenTests\" />
+    <add key="Logs" value="..\..\BlogUITests\Logs\" />
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
     <unitTestProvider name="NUnit" />
