--- a/BlogUnitTests/app1.config
+++ b/BlogUnitTests/app1.config
@@ -21,16 +21,11 @@
   </runtime>
 <specFlow>
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-    <unitTestProvider name="NUnit" />
-      <plugins>
+  <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --><unitTestProvider name="NUnit" /><plugins>
       <add name="TestStack.Seleno.BrowserStack" path="..\packages\TestStack.Seleno.BrowserStack.SpecFlowPlugin.1.0.8.8\lib\net451" type="GeneratorAndRuntime" />
-    </plugins>
-      <stepAssemblies>
+    </plugins><stepAssemblies>
       <stepAssembly assembly="TestStack.Seleno.BrowserStack.Core" />
-    </stepAssemblies>
-      </specFlow>
-        <appSettings>     
+    </stepAssemblies></specFlow><appSettings>
     <add key="URL" value="http://localhost:60634/" />
     <add key="TestDataSheetPath" value="..\..\BlogUITests\DataDrivenTests\" />
     <add key="Logs" value="..\..\BlogUITests\Logs\" />
@@ -46,21 +41,4 @@
      <add key="browserStack.user" value="<yourUserNameHere>" />
      <add key="browserstack.key" value="<yourAccessKeyHere>" />
     -->
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
-  </appSettings>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-  </startup>
-  <system.web>
-    <membership defaultProvider="ClientAuthenticationMembershipProvider">
-      <providers>
-        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
-      </providers>
-    </membership>
-    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
-      <providers>
-        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
-      </providers>
-    </roleManager>
-  </system.web>
-</configuration>
+  </appSettings><startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" /></startup></configuration>
