Logger and screenshot added

--- a/BlogIntegrationTests/app1.config
+++ b/BlogIntegrationTests/app1.config
@@ -22,7 +22,7 @@
   <specFlow>
     <add key="URL" value="http://localhost:60634/" />
     <add key="TestDataSheetPath" value="..\..\BlogUITests\DataDrivenTests\" />
-    <add key="Logs" value="..\..\BlogUITests\Logs\" />
+    <add key="Logs" value="d:\ROSSEN\QA\C#\HomeWork\BlogHomeWork\" />
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
     <unitTestProvider name="NUnit" />
