--- a/BlogUnitTests/app1.config
+++ b/BlogUnitTests/app1.config
@@ -28,7 +28,7 @@
     </stepAssemblies></specFlow><appSettings>
     <add key="URL" value="http://localhost:60634/" />
     <add key="TestDataSheetPath" value="..\..\BlogUITests\DataDrivenTests\" />
-    <add key="Logs" value="..\..\BlogUITests\Logs\" />
+      <add key="Logs" value="d:\ROSSEN\QA\C#\HomeWork\BlogHomeWork\" />
     <add key="browserStackRemoteDriverUrl" value="http://hub.browserstack.com/wd/hub/" />
     <add key="buildNumber" value="" />
     <add key="browserStackApiUrl" value="https://www.browserstack.com/automate/" />
