Path to DataUser fixed

--- a/BlogUITests/app.config
+++ b/BlogUITests/app.config
@@ -32,7 +32,7 @@
       </specFlow>
         <appSettings>     
     <add key="URL" value="http://localhost:60634/" />
-    <add key="TestDataSheetPath" value="d:\ROSSEN\QA\C#\HomeWork\BlogHomeWork\BlogUITests\DataDrivenTests\" />
+    <add key="TestDataSheetPath" value="..\\..\\BlogHomeWork\\BlogUITests\\DataDrivenTests\\" />
     <add key="Logs" value="..\\..\\BlogHomeWork\\BlogUITests\\Logs\\" />
     <add key="browserStackRemoteDriverUrl" value="http://hub.browserstack.com/wd/hub/" />
     <add key="buildNumber" value="" />
