--- a/BlogUITests/app.config
+++ b/BlogUITests/app.config
@@ -32,8 +32,8 @@
       </specFlow>
         <appSettings>     
     <add key="URL" value="http://localhost:60634/" />
-    <add key="TestDataSheetPath" value="d:\ROSSEN\QA\C#\HomeWork\BlogHomeWork\BlogUITests\DataDrivenTests\" />
-    <add key="Logs" value="..\\..\\BlogHomeWork\\BlogUITests\\Logs\\" />
+    <add key="TestDataSheetPath" value="..\..\BlogUITests\DataDrivenTests\" />
+    <add key="Logs" value="d:\ROSSEN\QA\C#\HomeWork\BlogHomeWork\BlogUITests\Logs\" />
     <add key="browserStackRemoteDriverUrl" value="http://hub.browserstack.com/wd/hub/" />
     <add key="buildNumber" value="" />
     <add key="browserStackApiUrl" value="https://www.browserstack.com/automate/" />
