--- a/BlogUITests/app.config
+++ b/BlogUITests/app.config
@@ -33,7 +33,7 @@
         <appSettings>     
     <add key="URL" value="http://localhost:60634/" />
     <add key="TestDataSheetPath" value="..\..\BlogUITests\DataDrivenTests\" />
-    <add key="Logs" value="d:\ROSSEN\QA\C#\HomeWork\BlogHomeWork\BlogUITests\Logs\" />
+    <add key="Logs" value="..\..\BlogHomeWork\BlogUITests\Logs\" />
     <add key="browserStackRemoteDriverUrl" value="http://hub.browserstack.com/wd/hub/" />
     <add key="buildNumber" value="" />
     <add key="browserStackApiUrl" value="https://www.browserstack.com/automate/" />
