--- a/BlogUITests/app.config
+++ b/BlogUITests/app.config
@@ -32,7 +32,7 @@
       </specFlow>
         <appSettings>     
     <add key="URL" value="http://localhost:60634/" />
-         <add key="TestDataSheetPath" value="..\DataDrivenTests\" />
+         <add key="TestDataSheetPath" value="..\..\BlogUITests\DataDrivenTests\" />
          <add key="Logs" value="..\..\BlogUITests\Logs\" />      
         <!--  
     <add key="TestDataSheetPath" value="d:\ROSSEN\QA\C#\HomeWork\BlogHomeWork\BlogUITests\DataDrivenTests\" />
