--- a/BlogUITests/app.config
+++ b/BlogUITests/app.config
@@ -36,7 +36,7 @@
          <add key="Logs" value="..\..\BlogUITests\Logs\" />      
         <!--  
     <add key="TestDataSheetPath" value="d:\ROSSEN\QA\C#\HomeWork\BlogHomeWork\BlogUITests\DataDrivenTests\" />
-    <add key="Logs" value="d:\ROSSEN\QA\C#\HomeWork\BlogHomeWork\BlogUITests\Logs\" />-->
+    <add key="Logs" value="d:\ROSSEN\QA\C#\HomeWork\BlogHomeWork\BlogUITests\Logs\" />
     <add key="browserStackRemoteDriverUrl" value="http://hub.browserstack.com/wd/hub/" />
     <add key="buildNumber" value="" />
     <add key="browserStackApiUrl" value="https://www.browserstack.com/automate/" />
