--- a/BlogIntegrationTests/app1.config
+++ b/BlogIntegrationTests/app1.config
@@ -21,8 +21,8 @@
   </runtime>
   <specFlow>
     <add key="URL" value="http://localhost:60634/" />
-    <add key="TestDataSheetPath" value="..\..\BlogUITests\DataDrivenTests\" />
-    <add key="Logs" value="d:\ROSSEN\QA\C#\HomeWork\BlogHomeWork\" />
+    <add key="TestDataSheetPath" value="d:\ROSSEN\QA\C#\HomeWork\BlogHomeWork\BlogUITests\DataDrivenTests\" />
+    <add key="Logs" value="d:\ROSSEN\QA\C#\HomeWork\BlogHomeWork\BlogUITests\Logs\" />
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
     <unitTestProvider name="NUnit" />
