--- a/Blog/packages.config
+++ b/Blog/packages.config
@@ -3,7 +3,7 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
-  <package id="Dapper" version="1.50.2" targetFramework="net452" />
+  <package id="Dapper" version="1.50.5" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
@@ -38,29 +38,30 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
-  <package id="NUnit" version="3.6.1" targetFramework="net452" />
-  <package id="NUnit.Console" version="3.6.1" targetFramework="net452" />
-  <package id="NUnit.ConsoleRunner" version="3.6.1" targetFramework="net452" />
-  <package id="NUnit.Extension.NUnitProjectLoader" version="3.5.0" targetFramework="net452" />
-  <package id="NUnit.Extension.NUnitV2Driver" version="3.6.0" targetFramework="net452" />
-  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.5.0" targetFramework="net452" />
-  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.2" targetFramework="net452" />
-  <package id="NUnit.Extension.VSProjectLoader" version="3.5.0" targetFramework="net452" />
-  <package id="NUnit.Runners" version="3.6.1" targetFramework="net452" />
-  <package id="NUnit3TestAdapter" version="3.7.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
+  <package id="NUnit" version="3.10.1" targetFramework="net452" />
+  <package id="NUnit.Console" version="3.8.0" targetFramework="net452" />
+  <package id="NUnit.ConsoleRunner" version="3.8.0" targetFramework="net452" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.6.0" targetFramework="net452" />
+  <package id="NUnit.Extension.NUnitV2Driver" version="3.7.0" targetFramework="net452" />
+  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.6.0" targetFramework="net452" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.4" targetFramework="net452" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.7.0" targetFramework="net452" />
+  <package id="NUnit.Runners" version="3.8.0" targetFramework="net452" />
+  <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net452" />
   <package id="NUnitTestAdapter" version="2.1.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
-  <package id="Selenium.Firefox.WebDriver" version="0.15.0" targetFramework="net452" />
-  <package id="Selenium.Support" version="3.4.0" targetFramework="net452" />
-  <package id="Selenium.WebDriver" version="3.4.0" targetFramework="net452" />
-  <package id="Selenium.WebDriver.ChromeDriver" version="2.29.0" targetFramework="net452" />
-  <package id="Selenium.WebDriver.GeckoDriver" version="0.16.1" targetFramework="net452" />
-  <package id="Selenium.WebDriver.GeckoDriver.Win32" version="0.16.1" targetFramework="net452" />
-  <package id="SpecFlow" version="2.1.0" targetFramework="net452" />
-  <package id="SpecFlow.CustomPlugin" version="2.1.0" targetFramework="net452" />
-  <package id="SpecFlow.NUnit" version="2.1.0" targetFramework="net452" />
+  <package id="Selenium.Firefox.WebDriver" version="0.21.0" targetFramework="net452" />
+  <package id="Selenium.Support" version="3.13.0" targetFramework="net452" />
+  <package id="Selenium.WebDriver" version="3.13.0" targetFramework="net452" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="2.40.0" targetFramework="net452" />
+  <package id="Selenium.WebDriver.GeckoDriver" version="0.21.0" targetFramework="net452" />
+  <package id="Selenium.WebDriver.GeckoDriver.Win32" version="0.21.0" targetFramework="net452" />
+  <package id="SpecFlow" version="2.3.2" targetFramework="net452" />
+  <package id="SpecFlow.CustomPlugin" version="2.3.2" targetFramework="net452" />
+  <package id="SpecFlow.NUnit" version="2.3.2" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net452" />
   <package id="TestStack.Seleno" version="0.9.61" targetFramework="net452" />
   <package id="TestStack.Seleno.BrowserStack.SpecFlowPlugin" version="1.0.8.8" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
