--- a/BlogUnitTests/app1.config
+++ b/BlogUnitTests/app1.config
@@ -23,7 +23,8 @@
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
   <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --><unitTestProvider name="NUnit" /><plugins>
       <add name="TestStack.Seleno.BrowserStack" path="..\packages\TestStack.Seleno.BrowserStack.SpecFlowPlugin.1.0.8.8\lib\net451" type="GeneratorAndRuntime" />
-    </plugins><stepAssemblies>
+    </plugins>
+    <stepAssemblies>
       <stepAssembly assembly="TestStack.Seleno.BrowserStack.Core" />
     </stepAssemblies></specFlow><appSettings>
     <add key="URL" value="http://localhost:60634/" />
