--- a/BlogUnitTests/BlogUnitTests.csproj
+++ b/BlogUnitTests/BlogUnitTests.csproj
@@ -124,6 +124,8 @@
     <None Include="app.config" />
     <None Include="app1.config" />
     <None Include="packages.config" />
+    <None Include="specflow.exe.config" />
+    <None Include="TeamCity.SpecFlow.Reporting.psm1" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
