--- a/BlogUnitTests/packages.config
+++ b/BlogUnitTests/packages.config
@@ -30,6 +30,7 @@
   <package id="SpecFlow.CustomPlugin" version="2.3.2" targetFramework="net452" />
   <package id="SpecFlow.NUnit" version="2.3.2" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net452" />
+  <package id="TeamCity.SpecFlow.Reporting" version="1.3.7" targetFramework="net452" />
   <package id="TestStack.Seleno" version="0.9.61" targetFramework="net452" />
   <package id="TestStack.Seleno.BrowserStack.SpecFlowPlugin" version="1.0.8.8" targetFramework="net452" />
 </packages>
