--- a/BlogIntegrationTests/BlogIntegrationTests.csproj
+++ b/BlogIntegrationTests/BlogIntegrationTests.csproj
@@ -126,6 +126,8 @@
     <None Include="app.config" />
     <None Include="app1.config" />
     <None Include="packages.config" />
+    <None Include="specflow.exe.config" />
+    <None Include="TeamCity.SpecFlow.Reporting.psm1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BlogUITests\BlogUITests.csproj">
